[metadata]
name = pyrexpaint
version = 0.0.1
author = Matt Link
description = A small library for loading REXPaint .xp files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mattlink/pyrexpaint
project_urls =
    Bug Tracker = https://github.com/mattlink/pyrexpaint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
